--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,7 @@
 
 # Inside of setup.cfg
 [metadata]
-description-file = README.md
+name = PhageBoost
+version = 0.1.5
+long-description = file: README.md
+long_description_content_type = text/markdown
